--- a/index.html
+++ b/index.html
@@ -44,6 +44,24 @@
       </label>
 
       <label class="control">
+        <span>Falling Leaves</span>
+        <input id="fallingLeaves" type="range" min="0" max="15" step="1" value="12" />
+        <output id="fallingLeavesValue">12</output>
+      </label>
+
+      <label class="control row">
+        <span>Ammo.js Physics</span>
+        <input id="physics" type="checkbox" checked />
+      </label>
+
+      <label class="control row">
+        <span>Show Colliders</span>
+        <input id="physicsDebug" type="checkbox" />
+      </label>
+
+      <p id="physicsStatus" class="status">Ammo.js: loading...</p>
+
+      <label class="control">
         <span>Branching</span>
         <input id="branching" type="range" min="0.1" max="1.3" step="0.01" value="0.9" />
         <output id="branchingValue">0.90</output>
@@ -74,6 +92,7 @@
       <p class="hint">Mouse: drag to orbit, wheel to zoom, right-drag to pan.</p>
     </aside>
 
+    <script src="https://cdn.jsdelivr.net/npm/ammo.js@0.0.10/ammo.js"></script>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
