--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
         <input id="physicsDebug" type="checkbox" />
       </label>
 
+      <label class="control row">
+        <span>Joint Caps</span>
+        <input id="jointCaps" type="checkbox" checked />
+      </label>
+
       <p id="physicsStatus" class="status">Ammo.js: loading...</p>
 
       <label class="control">
@@ -71,6 +76,24 @@
         <span>Leaf Density</span>
         <input id="leafDensity" type="range" min="0.15" max="1.5" step="0.01" value="1.28" />
         <output id="leafDensityValue">1.28</output>
+      </label>
+
+      <label class="control">
+        <span>Leaves on Branches</span>
+        <input id="branchLeaves" type="range" min="0" max="1" step="0.01" value="0.45" />
+        <output id="branchLeavesValue">0.45</output>
+      </label>
+
+      <label class="control">
+        <span>Branch Sag</span>
+        <input id="branchSag" type="range" min="0" max="1" step="0.01" value="0.28" />
+        <output id="branchSagValue">0.28</output>
+      </label>
+
+      <label class="control">
+        <span>Branch Collision</span>
+        <input id="branchCollision" type="range" min="0" max="1" step="0.01" value="0.72" />
+        <output id="branchCollisionValue">0.72</output>
       </label>
 
       <label class="control">
@@ -91,6 +114,18 @@
 
       <p class="hint">Mouse: drag to orbit, wheel to zoom, right-drag to pan.</p>
     </aside>
+
+    <button
+      id="uiToggle"
+      class="ui-toggle"
+      type="button"
+      aria-controls="ui"
+      aria-expanded="true"
+      aria-label="Ocultar menú"
+      hidden
+    >
+      <span class="ui-toggle__chevron" aria-hidden="true"></span>
+    </button>
 
     <script src="https://cdn.jsdelivr.net/npm/ammo.js@0.0.10/ammo.js"></script>
     <script type="module" src="./main.js"></script>
