feat: improve scene realism and tighten cinematic fog focus

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <canvas id="sim"></canvas>
+    <div id="cinematicOverlay" aria-hidden="true"></div>
 
     <aside id="ui">
       <h1>Plant Growth Lab</h1>
